20190925
--------
- Fixed #44994 - Reduce the amount of calls to VDBJDBCDatabaseMetaData.getDatabaseMajorVersion()
                 in order to avoid a /$metadata performance issue.

20190528
--------
- Fixed #42688 - Fix documentation lacking explanation of the OAuth 2.0 support
- Added #40505 - Enhancement to support entity collection streaming in OData service connector
- Fixed #40963 - Default CORS config will be invalid with the next version of the embedded Tomcat

20190129
--------
- Added #36510 - The OData 4 Service logs an error because it is unnecessarily checking Kerberos availability in the VDP Server when no user has been configured in the data source connection
- Added #41562 - Added profile errorprone to execute error prone
- Added #41564 - Check and fix errors and CVE with error-prone and dependency check

20180814
--------
- Added #37783 - Update all instances of the Spring Framework in order to include fixes for the latest CVEs
- Fixed #37932 - The service fails while obtaining the PKs for a view if the user only has metadata privileges over it
- Fixed #38381 - Avoid entities without key properties

20180412
--------
- Fixed #36961 - User names should be quoted in CONNECT statements
- Fixed #36935 - Explain the required privileges for users in the user manual
- Fixed #36977 - Fix logging of exceptions

20180410
--------
- Fixed #36498 - Issues addressing individual properties and their values
- Fixed #36827 - NPE when accessing the root of the OData 4 Service
- Fixed #36813 - If the OData service is deployed in the web container included with Denodo Platform,
                 accessing its base URL will lead to a "too many redirects" error

20180312
--------
- Fixed #35414 - OData 4 web service of a view without primary key should not be allowed to be available for an OData web service
- Fixed #36282 - The OData 4 Service cannot access VDP databases and views with non-ASCII characters in their names

20170912
--------